# vrchat-osc-systeminfo

./: Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: release.yml
Settings/: settings.json
src/: main.rs  settings.rs  stat.rs
