[package]
name = "vrchat-osc-systeminfo"
version = "0.1.0"
edition = "2021"

[dependencies]
rosc = "0.10.1"
sysinfo = { version = "0.31.4" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
fern = { version = "0.6.2" }
log = { version = "0.4.22" }
# libdrm_amdgpu_sys = { version = "0.7.5" } # 将来的に使いたい
